<resources>
    <string name="app_name">CompoStore</string>
    <string name="slogan">Welcome to the best components store</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="Applogo">AppLogo</string>
    <string name="txtSlogan">Welcome to the best components store</string>
    <string name="PhoneNumber">PhoneNumber</string>
    <string name="phoneExample">624758436</string>
    <string name="Name">Name</string>
    <string name="NameExample">Pedro Fernandez</string>
    <string name="PassExample">123456</string>
    <string name="Password">Password</string>
    <string name="continueUnlogged">Continue unlogged</string>
    <string name="title_activity_user__not_logged">activity_user_NOT_logged</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sample_mail">yourmail@gmail.com</string>
    <string name="sample_username">yourusername</string>
    <string name="title_activity_home">Home</string>

    <string name="checkbox_remember_me_message">Remember me</string>
    <string name="menuProducts">Products</string>
    <string name="menuFavorites">Favorites</string>
    <string name="menuCart">Cart</string>
    <string name="menuOrders">Orders</string>
    <string name="menuSettings">Settings</string>
    <string name="menuShare">Share a product</string>
    <string name="menuSignOut">Sign Out</string>
    <string name="menuAccount">Account</string>
    <string name="menuLogin">Log In</string>

    <string name="sampleFavourites">Favourites -  Example</string>
    <string name="sampleCart">Cart -  Example</string>
    <string name="sampleOrders">Orders -  Example</string>
    <string name="sampleSettings">Settings -  Example</string>

    <string name="btnBack">Back</string>
    <string name="PlaceOrder">Place Order</string>
    <string name="DefaultCartTotal">10.000€</string>
    <string name="CartTotalLabel">"Total: "</string>
    <string name="DefaultCartComponent">Component 1</string>
    <string name="DefaultCartCompPrice">100.000€</string>
    <string name="DefaultCompDetailPrice">375.40</string>
    <string name="DefaultCompDetailName">Component Name</string>
    <string name="DefaultOrderStatus">Status</string>
    <string name="DefaultOrderPhone">123456789</string>
    <string name="DefaultOrderId">#111111</string>
    <string name="DefaultOrderAddress">Address</string>
    <string name="RefreshString">Refresh</string>
    <string name="component_name">Component name</string>
    <string name="description">Description</string>
    <string name="DefaultComponentName">Name of component</string>
    <string name="DeleteItemText">Delete</string>
    
    <string name="facebook_app_id">1660848267394080</string>
    <string name="facebook_login_protocol_name">fb1660848267394080</string>
    <string name="IconoDeBorrado">Icono de borrado</string>
    <string name="iconoDeBorrado">Icono de borrado</string>
    <string name="iconoImagenCarrito">Icono Imagen Carrito</string>
    <string name="defaultPrecioItem">100€</string>
    <string name="defcompname">Name of component</string>
    <string name="DefaultDescription">Description</string>


</resources>
