<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_products_black_24dp"
            android:title="@string/menuProducts" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/menuFavorites" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menuCart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_order_black_24dp"
            android:title="@string/menuOrders" />
    </group>

    <item
        android:id="@+id/itemCommunicate"
        android:title="@string/menuAccount">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_out_black_24dp"
                android:title="@string/menuSignOut" />
        </menu>
    </item>

</menu>
