<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="es.uniovi.sdm.compostore.SignIn">


   <LinearLayout
       android:orientation="vertical"
       android:layout_marginLeft="8dp"
       android:layout_marginRight="8dp"
       android:layout_centerInParent="true"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="185dp">

           <android.support.design.widget.TextInputEditText
               android:id="@+id/editPhone"
               android:hint="@string/PhoneNumber"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColorHint="@android:color/white"
               android:text="@string/phoneExample"
               android:textColor="@android:color/white"
               android:textSize="34sp"
               android:inputType="phone"
              />
       </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="185dp">

           <android.support.design.widget.TextInputEditText
               android:id="@+id/editName"
               android:hint="@string/Name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColorHint="@android:color/white"
               android:text="@string/NameExample"
               android:textColor="@android:color/white"
               android:textSize="34sp"
               android:inputType="textPersonName"
               />
       </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="185dp">

           <EditText
               android:id="@+id/editPassword"
               android:hint="@string/Password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColorHint="@android:color/white"
               android:text="@string/PassExample"
               android:textColor="@android:color/white"
               android:textSize="34sp"
               android:inputType="textPassword" />
       </android.support.design.widget.TextInputLayout>

   </LinearLayout>


</RelativeLayout>