<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="es.uniovi.sdm.compostore.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="272dp"
        android:layout_height="81dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="307dp"
        android:layout_marginBottom="179dp"
        android:contentDescription="@string/Applogo"
        app:srcCompat="@drawable/logo_compostore" />

    <TextView
        android:id="@+id/txtSlogan"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="413dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="90dp"
        android:text="@string/txtSlogan"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignUp"
            android:text="@string/SignUp"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:fButtonColor="@color/btnSignUp"
            app:shadowColor="@android:color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp" />


        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignIn"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/SignIn"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:fButtonColor="@color/btnSignIn"
            app:cornerRadius="4dp"
            app:shadowColor="@android:color/black"
            app:shadowEnabled="true"
            app:shadowHeight="5dp" />

    </LinearLayout>




</RelativeLayout>